fix spacing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     font-size: 16px;
     line-height: 1.6;
     letter-spacing: 1px;
-    word-spacing: 1px;
 
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -65,8 +64,12 @@ h1 {
 
 h2, h3, h4 {
     font: var(--title-font);
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
+}
+
+p {
+    word-spacing: 1px;
 }
 
 .baseline {
